fix cropped preview

--- a/src/layout/ImageUpload/ImageCanvas.module.css
+++ b/src/layout/ImageUpload/ImageCanvas.module.css
@@ -11,3 +11,33 @@
 .canvas:active {
   cursor: grabbing;
 }
+
+.previewBackground {
+  background-image:
+    linear-gradient(
+      45deg,
+      rgba(204, 204, 204, 0.5) 25%,
+      transparent 25%,
+      transparent 75%,
+      rgba(204, 204, 204, 0.5) 75%,
+      rgba(204, 204, 204, 0.5) 100%
+    ),
+    linear-gradient(
+      45deg,
+      rgba(204, 204, 204, 0.5) 25%,
+      rgba(255, 255, 255, 0.5) 25%,
+      rgba(255, 255, 255, 0.5) 75%,
+      rgba(204, 204, 204, 0.5) 75%,
+      rgba(204, 204, 204, 0.5) 100%
+    );
+  background-size: 20px 20px; /* Adjust size of each square */
+  background-position:
+    0 0,
+    10px 10px; /* Offset the second gradient */
+  height: 320px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: var(--ds-size-4);
+  box-sizing: border-box;
+}
